--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,24 @@
     "version": "0.2.0",
     "configurations": [
     {
-        "type": "node",
-        "request": "launch",
-        "name": "Launch via NPM",
-        "runtimeExecutable": "npm",
-        "windows": {
-            "runtimeExecutable": "npm.cmd"
-        },
-        "runtimeArgs": [
-            "start"
-        ],
-        "port": 5858,
-        "cwd": "${workspaceRoot}"
+        "name": "Launch",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}/src/es6-init.js",
+            "stopOnEntry": false,
+            "args": [],
+            "cwd": "${workspaceRoot}",
+            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+            "windows": {
+                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
+            },
+            "runtimeArgs": [
+                ".",
+                "--debug-brk=5858"
+            ],
+            "env": {},
+            "sourceMaps": false,
+            "port": 5858
     }
     ]
 }
