--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "pack": "build --dir",
     "dist": "build",
     "rebuild": "electron-rebuild -f -w serialport",
-    "test": "mocha --require babel-register ./src/**/*.spec.js",
-    "test:file": "mocha --silent --compilers js:babel-core/register --require babel-register --require babel-core/register --require babel-polyfill"
+    "test": "mocha --compilers js:babel-core/register --require babel-register --require babel-core/register --require babel-polyfill ./src/**/*.spec.js",
+    "test:file": "mocha --compilers js:babel-core/register --require babel-register --require babel-core/register --require babel-polyfill",
+    "package-win32": "electron-packager-compile --arch x64 --asar --electron-version 1.4.15 --platform win32 --icon assets/icon.ico --overwrite --out=release-builds ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "electron-compile": "^5.1.3",
+    "electron-config": "^0.2.1",
     "react-bootstrap": "^0.30.7",
     "react-desktop": "^0.2.17",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "serialport": "^4.0.7"
@@ -31,6 +34,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "electron-compilers": "^5.4.0",
     "electron-installer-dmg": "^0.2.0",
     "electron-packager": "^8.5.1",
@@ -38,9 +42,11 @@
     "electron-rebuild": "^1.5.7",
     "electron-winstaller": "^2.5.2",
     "mocha": "^3.2.0",
+    "mocha-sinon": "^1.1.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redux-devtools": "^3.3.2"
+    "redux-devtools": "^3.3.2",
+    "sinon": "^1.17.7"
   },
   "build": {
     "appId": "me.sergeyyanchi.smartserialapp"
