added project page

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: Smart Serial
+description: Simple application for communication with your Arduino or any other device over communication serial port.
+show_downloads: true
