--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "dist": "build",
     "rebuild": "electron-rebuild -f -w serialport",
     "test": "mocha --compilers js:babel-core/register --require babel-register --require babel-core/register --require babel-polyfill ./src/**/*.spec.js",
-    "test:file": "mocha --compilers js:babel-core/register --require babel-register --require babel-core/register --require babel-polyfill",
+    "test:file": "mocha test/browser.js --compilers js:babel-core/register --require babel-register --require babel-core/register --require babel-polyfill",
     "package-win32": "electron-packager-compile --arch x64 --asar --electron-version 1.4.15 --platform win32 --icon assets/icon.ico --overwrite --out=release-builds ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-react": "^6.23.0",
     "electron-compile": "^5.1.3",
     "electron-config": "^0.2.1",
     "react-bootstrap": "^0.30.7",
@@ -41,9 +42,12 @@
     "electron-prebuilt-compile": "^1.4.15",
     "electron-rebuild": "^1.5.7",
     "electron-winstaller": "^2.5.2",
+    "enzyme": "^2.7.1",
+    "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
     "mocha-sinon": "^1.1.6",
     "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "redux-devtools": "^3.3.2",
     "sinon": "^1.17.7"
