updated build configurations and readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,11 @@ before_install:
 install:
 - nvm install 6
 - npm install
-- npm prune
 script:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm run package-linux; npm run package-mac; fi
 branches:
   only:
   - master
+
+after_success:
+- npm run coverage
