--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "coverage": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha ./src/**/*.spec.js",
     "test": "mocha --require babel-polyfill ./src/**/*.spec.js",
     "test:file": "mocha --require babel-polyfill",
+    "coveralls": "npm run coverage -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "package-win32": "electron-packager-compile --arch x64 --asar --electron-version 1.4.15 --platform win32 --icon assets/icon.ico --prune=true --overwrite --out=release-builds .",
     "package-mac": "electron-packager-compile . --overwrite --asar --electron-version 1.4.15 --platform=darwin --arch=x64 --icon=assets/icon.icns --prune=true --overwrite --out=release-builds",
-    "package-linux" : "electron-packager . --overwrite --asar --electron-version 1.4.15 --platform=linux --arch=x64 --icon=assets/icon-512.png --prune=true --overwrite --out=release-builds"
+    "package-linux": "electron-packager . --overwrite --asar --electron-version 1.4.15 --platform=linux --arch=x64 --icon=assets/icon-512.png --prune=true --overwrite --out=release-builds"
   },
   "author": "Sergey Yanchi",
   "license": "MIT",
@@ -40,6 +41,7 @@
     "babel-register": "^6.23.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "coveralls": "^2.11.16",
     "electron-compilers": "^5.5.1",
     "electron-installer-dmg": "^0.2.0",
     "electron-packager": "^8.5.1",
@@ -50,7 +52,7 @@
     "istanbul": "^1.0.0-alpha",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "mocha-sinon": "^1.1.6",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
