--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test": "mocha --require babel-polyfill ./src/**/*.spec.js",
     "test:file": "mocha --require babel-polyfill",
     "coveralls": "npm run coverage -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
-    "package-win32": "electron-packager-compile --arch x64 --asar --electron-version 1.4.15 --platform win32 --icon assets/icon.ico --prune=true --overwrite --out=release-builds .",
-    "package-mac": "electron-packager-compile . --overwrite --asar --electron-version 1.4.15 --platform=darwin --arch=x64 --icon=assets/icon.icns --prune=true --overwrite --out=release-builds",
-    "package-linux": "electron-packager . --overwrite --asar --electron-version 1.4.15 --platform=linux --arch=x64 --icon=assets/icon-512.png --prune=true --overwrite --out=release-builds"
+    "package-win32": "electron-packager-compile --overwrite --asar --electron-version 1.4.15 --platform=win32 --arch=x64 --icon assets/icon.ico --prune=true --out=release-builds .",
+    "package-mac": "electron-packager-compile --overwrite --asar --electron-version 1.4.15 --platform=darwin --arch=x64 --icon=assets/icon.icns --prune=true --out=release-builds .",
+    "package-linux": "electron-packager-compile --overwrite --asar --electron-version 1.4.15 --platform=linux --arch=x64 --icon=assets/icon-512.png --prune=true --out=release-builds ."
   },
   "author": "Sergey Yanchi",
   "license": "MIT",
