--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
-osx_image: xcode7.3
+osx_image: xcode8.2
 sudo: required
 dist: trusty
 language: c
 matrix:
   include:
   - os: osx
+    env: APP_BIN_OUTPUT=serial-port-darwin-x64
   - os: linux
-    env: CC=clang CXX=clang++ npm_config_clang=1
+    env: CC=clang CXX=clang++ npm_config_clang=1 APP_BIN_OUTPUT=serial-port-linux-x64
     compiler: clang
 cache:
   directories:
@@ -21,14 +22,21 @@ before_install:
   "$TRAVIS_OS_NAME" == "linux" ] && echo "linux" || echo "darwin")-amd64-1.2.1.tar.gz
   | tar -xz -C /tmp/git-lfs --strip-components 1 && /tmp/git-lfs/git-lfs pull
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install --no-install-recommends -y icnsutils graphicsmagick xz-utils; fi
+- chmod +x scripts/build.sh
 install:
 - nvm install 6
 - npm install
 script:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm run package-linux; npm run package-mac; fi
-branches:
-  only:
-  - master
+- scripts/build.sh
 
 after_success:
 - npm run coveralls
+
+deploy:
+  provider: releases
+  api_key: "$GITHUB_OAUTH_TOKEN"
+  file: "release-builds/$APP_BIN_OUTPUT/$APP_BIN_OUTPUT.zip"
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
